--- a/berita2.html
+++ b/berita2.html
@@ -13,7 +13,7 @@
         <h1>La Primera</h1>
         <nav>
             <ul>
-                <li><a href="LaPrimera.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="AboutUS.html">ABOUT US</a></li>
                 <li><a href="ContactUs.html">CONTACT US</a></li>
             </ul>
