berita 2 ganti header

--- a/berita2.html
+++ b/berita2.html
@@ -50,6 +50,11 @@
             </article>
         </section>
     </main>
+    
+    <script>
+        document.getElementById("brand").innerHTML = "La Primera > Spanyol";
+    </script>
+
     <footer>
         <p>&copy; 2023 La Primera and Co.</p>
     </footer>
